@@ -4,7 +4,6 @@
 \alias{graph-iplot}
 \alias{iplot}
 \alias{iplot.graphNEL}
-\alias{iplot.graphNEL}
 \title{Function for plotting graphs using the 'igraph' package.}
 \usage{
 iplot(x, ...)
