@@ -19,21 +19,6 @@
 \alias{is.TUG.default}
 \alias{is.TUGMAT}
 \alias{is.adjMAT}
-\alias{is.DAG.graphNEL}
-\alias{is.DAG.default}
-\alias{is.DAGMAT}
-\alias{is.UG}
-\alias{is.UG.graphNEL}
-\alias{is.UG.default}
-\alias{is.UGMAT}
-\alias{is.TUG}
-\alias{is.TUG.graphNEL}
-\alias{is.TUG.default}
-\alias{is.TUGMAT}
-\alias{is.DG}
-\alias{is.DG.graphNEL}
-\alias{is.DG.default}
-\alias{is.DGMAT}
 \title{Check properties of graphs.}
 \usage{
 is.DAG(object)
