@@ -6,7 +6,6 @@
 \alias{dgCMatrix2matrix__}
 \alias{M2dgCMatrix__}
 \alias{M2matrix__}
-\alias{internal}
 \alias{dagList2dgCMatrix__}
 \alias{ugList2dgCMatrix__}
 \alias{dagList2matrix__}
@@ -17,11 +16,9 @@
 \alias{adjList2ftM__}
 \alias{adjList2matrix__}
 \alias{adjList2dgCMatrix__}
-\alias{internal}
 \alias{which_matrix_index__}
 \alias{rowmat2list__}
 \alias{colmat2list__}
-\alias{internal}
 \alias{tab_list_mult_}
 \alias{tab_list_add_}
 \alias{tab_op_}
@@ -31,11 +28,9 @@
 \alias{tab_div_}
 \alias{tab_div0_}
 \alias{tab_equal_}
-\alias{internal}
 \alias{is_subsetof__}
 \alias{get_superset__}
 \alias{get_subset__}
-\alias{internal}
 \alias{all_pairs__}
 \title{Internal Rcpp functions}
 \description{
