@@ -1,3 +1,9 @@
+2018-12-12 Søren Højsgaard <sorenh@math.aau.dk>
+
+	* random_dag changed so that maxpar parents can be obtained; before it was maxpar-1
+
+	
+	
 2018-07-12 Søren Højsgaard <sorenh@math.aau.dk>
 
 	* Minor changes, including fixing a warning from CRAN
